# S4

./: .gitignore  CMakeLists.txt  Makefile.Darwin  Makefile.common  README  README.md  s4py.yml
CMake/: CMakeLists.txt
CMake/S4/: .#FindAccelerators.cmake  FindAccelerators.cmake  FindFFTW.cmake  FindLua.cmake  S4CFlagsSetup.cmake  S4MPISetup.cmake  S4Macros.cmake  S4PythonSetup.cmake  UseCython.cmake
S4/: CMakeLists.txt
cpp/: CMakeLists.txt  Interpolator.cpp  Interpolator.h  S4.cpp  S4.h  S4_internal.h  SpectrumSampler.cpp  SpectrumSampler.h  __init__.py  convert.cpp  convert.h  cubature.cpp  cubature.h  gsel.cpp  gsel.h  new_python.cpp  new_python.h  numalloc.cpp  python.cpp  python.h  rcwa.cpp  rcwa.h  sort.cpp  sort.h  test_func.cpp  test_func.h
cpp/fmm/: fft_iface.cpp  fft_iface.h  fmm.h  fmm_FFT.cpp  fmm_PolBasisJones.cpp  fmm_PolBasisNV.cpp  fmm_PolBasisVL.cpp  fmm_closed.cpp  fmm_common.cpp  fmm_experimental.cpp  fmm_kottke.cpp
cpp/kiss_fft/: kiss_fft.cpp  kiss_fft.h
cpp/kiss_fft/tools/: kiss_fftnd.cpp  kiss_fftnd.h
cpp/pattern/: pattern.cpp  pattern.h  predicates.cpp
doc/: Makefile
doc/source/: changelog.rst  conf.py  dev_info.rst  index.rst  install.rst  install_new.rst  python_api.rst  tutorial.rst
notebooks/: ElectricAndMagneticFieldRetrieval.ipynb  Fields.ipynb  FresnelExample.ipynb  Tutorial.ipynb  util.py
notebooks/materialData/: README.org  Si.npy  SiO2.npy
notebooks/materialData/SiO2Raw/: Kischkat.npy  Lemarchand.npy  combine.py
notebooks/materialData/SiRaw/: Li.npy  Schinke.npy  combine.py
tests/: mpi_test.py  test.py
